# personal-ai-agent

./: .env.sample  README.md  idea.md  main.py  pyproject.toml  tests.py
.github/workflows/: tweet.yml
agents/: daily_post.py
agents/social_media/: README.md  content_creator.py  manager.py  post_publisher.py  prompts.py  schemas.py
utils/: models.py  openai.py
