[project]
name = "persoanl-ai-agent"
version = "0.1.0"
description = "Personal AI Agent for software developers in Nigeria."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.68.2",
    "pyairtable>=3.0.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
]
